# schnappster

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  IMPROVEMENT_PLAN.md  QWEN.md  README.md  UX_DESIGN_PLAN.md  docker-compose.yml  jahresplaner-techstack.md  pyproject.toml  pyrightconfig.json  pytest.ini  schnappster-context.md  schnappster-frontend-prompt.md
.github/workflows/: deploy-on-release-tag.yml
app/: __init__.py  main.py
app/api/: __init__.py  ads.py  adsearch.py  errorlogs.py  scraperuns.py  settings.py
app/core/: __init__.py  auth.py  background_jobs.py  bootstrap.py  config.py  db.py  debug_runtime.py  fastapi_app.py  logging.py  middlewares.py  request_context.py  scheduler.py  security.py
app/models/: __init__.py  ad.py  adsearch.py  aianalysislog.py  deal_watch.py  errorlog.py  feed.py  gift_watch.py  logs_aianalysis.py  logs_error.py  logs_scraperun.py  notification.py  price_watch.py  scraperun.py  search_order.py  settings.py  settings_app.py  settings_user.py  user.py
app/prompts/: __init__.py  adanalyzer.jinja2  adanalyzer.py  adanalyzer_prompt.py  adanalyzer_system.jinja2  adanalyzer_user.jinja2  loader.py  negotiation.jinja2  negotiation.py  pricecandidates.py  pricecandidates_system.jinja2  pricecandidates_user.jinja2
app/routes/: __init__.py  adsearch.py  scraperuns.py
app/scraper/: __init__.py  ebay_active.py  ebay_sold.py  httpclient.py  mydealz.py  parser.py
app/services/: __init__.py  ai.py  deal_analysis.py  deal_watch.py  geo.py  gift_analysis.py  notification.py  price_extractor.py  price_reference.py  price_watch.py  relevance.py  scraper.py  settings.py  settings_async.py  telegram.py  users.py
backend/: alembic.ini  pyproject.toml  test.txt  testoutput.txt
backend/app/: .gitignore  main.py  scheduler.py
backend/app/api/: scraperuns.py
backend/app/api/routes/: ads.py  adsearch.py  errorlogs.py  settings.py
backend/app/core/: __init__.py  db.py  logging.py  scheduler.py  settings.py
backend/app/models/: ad.py  adsearch.py  errorlog.py  scraperun.py  settings.py
backend/app/scraper/: httpclient.py  parser.py  run.py
backend/app/services/: ai.py  scraper.py  settings.py
backend/cli/: analyze.py  reset_db.py  start.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 089655cf8d2c_add_seller_and_location_fields_to_ads.py  79894aa35617_initial_tables.py  b101d1b0c493_add_scrape_interval_minutes_to_adsearch.py
backend/playground/: fastapi_test.py
backend/tests/: test_scraper_parser.py
cli/: analyze.py  createadmin.py  dbreset.py  docs.py  help.py  pack_extension.py  release.py  reset_db.py  scrape.py  seed.py  seed_errorlogs.py  start.py
cli/mcp_server/: __init__.py  cli.py  test_mcp_quick_tunnel_url.py
db/migrations/: 001_init.sql  README.md
docs/: IMPROVEMENT_PLAN.md  ai-deal-analysis.md  checklist-dev-auth.md  checklist-go-live-vercel-railway.md  deployment-single-server-dev-prod.md  google-oauth-dev-setup.md  jahresplaner-stack.md  mcp-server-implementation.md  praesentation-neue-features.html  praesentation.html  release-and-tag-deploy-overview.md  schnappster-context.md  schnappster-saas-evolution.md  supabase-admin-role-initialization.md
docs/_static/: doc.css
docs/architecture/: ARCHITECTURE.md  architecture-backend-layers.mmd  architecture-scheduler-flow.mmd
docs/email-templates/: confirm-signup.html  invite-user.html  reset-password.html
docs/extension/: EXTENSION.md
docs/frontend/: FRONTEND.md
docs/legal/: dpa-register.md  subprocessors.md
docs/mails/: auth-email-branding.md
docs/plan/: 00-roadmap-overview.md  01-foundation-architecture-and-principles.md  02-implementation-standards-and-vibe-coding.md  03-user-profile-and-notifications.md  04-auth-screens-and-account-management.md  05-imprint-and-privacy-gdpr.md  06-frontend-auth-session-strategy.md  07-supabase-integration-step-by-step.md  (+5 more)
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
mcp-server/: Dockerfile  README.md  conftest.py  pyproject.toml  pyrightconfig.json
mcp-server/app/: __main__.py  bargain_detail_app.py  cli.py  config.py  mcp_apps.py  mitm_tunnel_trace_addon.py  server.py
mcp-server/app/templates/: ad_searches.html.j2
mcp-server/mcp_tests/: __init__.py  conftest.py  test_auth.py  test_bargain_detail_app.py
mcp-server/schnappster_mcp/: __init__.py  __main__.py  api_client.py  auth.py  bargain_detail_app.py  cli.py  config.py  mcp_apps.py  mcp_ui_jinja.py  mitm_tunnel_trace_addon.py  server.py  tunnel_front_tcp.py
mcp-server/schnappster_mcp/core/: __init__.py  api_client.py  auth.py  config.py  oauth_provider.py
mcp-server/schnappster_mcp/mcp_ui/: __init__.py  mcp_apps.py  template_render.py
mcp-server/schnappster_mcp/mcp_ui/templates/: _helpers.js.j2  _score.css.j2  ad_searches.html.j2  bargain_detail.html.j2  recent_bargains.html.j2
mcp-server/schnappster_mcp/templates/: bargain_detail.html.j2
mcp-server/tests/: conftest.py  test_api_client.py  test_auth.py  test_config.py  test_dotenv_paths.py  test_mcp_apps.py  test_mcp_branding_routes.py  test_mcp_ui_jinja.py  test_oauth_provider.py  test_server_transport_security.py  test_settings_sanitization.py  test_template_render.py
playground/: test_scraper.py
tests/: conftest.py  test_ai_service.py  test_api.py  test_auth.py  test_auth_flow.py  test_auth_inflight.py  test_background_jobs.py  test_deal_analysis.py  test_deal_watch.py  test_ebay_active.py  test_ebay_sold.py  test_feed.py  test_filter.py  test_geo.py  test_gift_scoring.py  test_gift_url.py  test_gift_watch_api.py  test_mcp_quick_tunnel_url.py  test_negotiation.py  test_notifications.py  test_parser.py  test_platforms.py  test_price_extractor.py  test_price_watch_service.py  test_prompts.py  test_relevance.py  test_scraper_filters.py  test_search_orders.py  test_supabase_pool_detection.py  test_user_settings_schema.py
web/: .gitignore  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
(+144 files in other folders)
