[project]
name = "schnappster"
version = "0.7.29"
description = "Kleinanzeigen.de Schnäppchen-Finder"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "curl-cffi>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "openai>=1.50.0",
    "pydantic-settings>=2.6.0",
    "lxml>=6.0.2",
    "rich>=14.3.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "psycopg[binary]>=3.2.12",
    "schnappster-mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.34.0",
    "coverage>=7.0.0",
    "ruff>=0.8.0",
    "pdoc>=14",
    "markdown>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
schnappster-mcp = { path = "mcp-server", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["UP017"]  # datetime.UTC nicht in allen Laufzeiten; timezone.utc nutzen

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.15.4",
    "pdoc>=14",
    "markdown>=3.7",
]

[project.scripts]
dbreset = "cli.dbreset:main"
scrape = "cli.scrape:main"
analyze = "cli.analyze:main"
start = "cli.start:main"
seed = "cli.seed:main"
docs = "cli.docs:main"
help = "cli.help:main"
release = "cli.release:main"
release-chrome-extension = "cli.pack_extension:main"
mcp-server = "cli.mcp_server.cli:main"