[project]
name = "schnappster"
version = "0.1.0"
description = "Kleinanzeigen.de Schnäppchen-Finder"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "curl-cffi>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "openai>=1.50.0",
    "pydantic-settings>=2.6.0",
    "lxml>=6.0.2",
    "rich>=14.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.34.0",
    "coverage>=7.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["UP017"]  # datetime.UTC nicht in allen Laufzeiten; timezone.utc nutzen

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[project.scripts]
dbreset = "cli.reset_db:main"
scrape = "cli.scrape:main"
analyze = "cli.analyze:main"
start = "cli.start:main"
