[project]
name = "schnappster-mcp"
version = "0.1.0"
description = "Remote MCP server (Streamable HTTP) for Schnappster API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.19.0",
    "pydantic-settings>=2.6.0",
]

[project.scripts]
schnappster-mcp = "schnappster_mcp.__main__:main"
mcp-server = "schnappster_mcp.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

# Nur das Verzeichnis `app/`; Importname `schnappster_mcp` (setuptools package-dir, editable-kompatibel).
[tool.setuptools]
packages = ["schnappster_mcp"]

[tool.setuptools.package-dir]
"schnappster_mcp" = "app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
