[project]
name = "schnappster-mcp"
version = "0.1.0"
description = "Remote MCP server (Streamable HTTP) for Schnappster API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "mcp>=1.19.0",
    "pydantic-settings>=2.6.0",
]

[project.scripts]
schnappster-mcp = "schnappster_mcp.__main__:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

# Paketquellen unter `schnappster_mcp/` (Importname = Verzeichnisname).
[tool.setuptools.packages.find]
where = ["."]
include = ["schnappster_mcp*"]
namespaces = false

[tool.setuptools.package-data]
schnappster_mcp = ["mcp_ui/templates/*.j2", "assets/*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
